# photchananukrom

./: .gitignore  Cargo.toml  README.md  database.sqlite  diesel.toml
data/: dataset_sqlite.py
migrations/2025-06-01-075648_create_words/: down.sql  up.sql
src/: api.rs  database.rs  main.rs  models.rs  schema.rs  templates.rs
templates/: index.html
