[package]
name = "photchananukrom"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
env_logger = "0.11.8"
rustls = "0.23.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
diesel = { version = "2.2.10", features = ["sqlite"] }
maud = "0.27.0"
